--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.4",
     "@hookform/resolvers": "^3.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.3",
     "aos": "3.0.0-beta.6",
